[mod] fixed a lot of bugs. This version is potentially finished and ready to be submitted.

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -25,8 +25,8 @@
     <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden. Achtung: Es können Wörter enthalten sein, die keine Bedeutung haben wie z.B. Hange.</string>
     <string name="DescriptionWordList">Wortwiederholung</string>
     <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
-    <string name="Listen">hören</string>
-    <string name="record">aufnehmen</string>
+    <string name="Listen">Hören</string>
+    <string name="record">Aufnehmen</string>
     <string name="questionDialog">"Wie möchten Sie Ihr Bild setzen ?"</string>
     <string name="dialogTitle">"Bilder hochladen Option"</string>
     <string name="trainingsetDesc">Jeden Tag bekommen Sie eine neue Einheit an Übungen die Sie absolvieren sollen. Klicken Sie hier um Ihre heutigen Übungen zu sehen!</string>
@@ -51,14 +51,14 @@
     <string name="needed">Berechtigung erforderlich</string>
     <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Daten über Ihre Sprache und Ihr Hörvermögen zu sammeln und auszuwerten. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen, nach der Sie Ihre Ergebnisse ansehen können. Außerdem haben Sie die Möglichkeit sich ein Profil zu erstellen in dem Sie wichtige Daten über sich speichern können. Um all das zu verwirklichen benötigt CITA den Zugriff auf Ihr Mikrofon, Ihren Speicher und auf Ihre Kamera. Um das zu erlauben, drücken Sie den Start Knopf und im dann erscheinenden Popup fenster auf Zulassen. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen.\nLos gehts !</string>
     <string name="startExercise">START</string>
-    <string name="back">zurück</string>
+    <string name="back">Zurück</string>
     <string name="messageEmpty">Sie müssen etwas sagen!</string>
     <string name="ExerciseDone">Gut gemacht! Wenn Sie die Übung wiederholen wollen drücken Sie bitte \"Nochmal\". Wenn Sie mit der Übungseinheit fortfahren möchten drücken Sie bitte \"Weiter\".</string>
     <string name="listenNotPressed">Sie müssen erst den \"Hören\" Knopf drücken bevor Sie das gehörte Wort wiederholen können!</string>
     <string name="title_notify">CITA</string>
     <string name="content_notify">Machen Sie Ihre täglichen Übungen um sich weiter zu verbessern!</string>
     <string name="trainingsetExerciseFinishedTitle">Übung beendet</string>
-    <string name="ready">fertig</string>
+    <string name="ready">Fertig</string>
     <string name="Next">Weiter</string>
     <string name="messageAgain">Etwas ist schief gelaufen bitte versuchen Sie es nochmal!</string>
     <string name="name">Name</string>
@@ -83,7 +83,7 @@
     <string name="timefornotifications">Zeit für Benachrichtigungen</string>
     <string name="now">JETZT!</string>
     <string name="restartSessionHelp">Sobald der Knopf \"Übungseinheit zurücksetzen\" gedrückt wurde und die Übungen der täglichen Einheit noch nicht beendet wurden, werden die Übungen in der täglichen Einheit geändert.\nSollte die Einheit schon erledigt sein, wird eine neue tägliche Einheit von Übungen erstellt, welche im Hauptmenü über \"Tägliche Einheit\" eingesehen werden kann!</string>
-    <string name="start">Beginne Dein </string>
+    <string name="start">Beginne dein </string>
     <string name="training">TRAINING</string>
     <string name="restartSession">Übungseinheit zurücksetzen</string>
     <string name="GeneralRepetitionFinished">Übung Erledigt</string>
@@ -118,14 +118,14 @@
     <string name="trainingsetText">Dies ist Ihre tägliche Trainingseinheit! Jede dieser Übungen misst einen anderen Teil Ihrer Fähigkeit zu hören und zu sprechen. Nachdem Sie alle Übungen beendet haben gehen Sie zum Ergebnis des Tages um zu sehen, wie Sie abgeschnitten haben! Wenn Sie mit einem Ergebnis nicht zufrieden sind, gehen Sie zu den Übungen und wiederholen Sie die Übung mit der Sie nicht zufrieden sind!\nJetzt lasst Uns anfangen! </string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
-    <string name="save">speichern</string>
+    <string name="save">Speichern</string>
     <string name="cochlearImplant">Cochlear Implantat</string>
     <string name="hearingAid">Hörgerät</string>
     <string name="typeOfImplant">Art des Implantats</string>
     <string name="sideOfImplant">Seite des Implantats</string>
     <string name="birthdate">Geburtsdatum</string>
     <string name="phoneNumber">Telefon Nummer</string>
-    <string name="recording">aufnahme läuft ...</string>
+    <string name="recording">Aufnahme läuft ...</string>
     <string name="trainingsetTitle">Übungseinheit</string>
     <string name="listEmpty">Alle Übungen für heute fertig.</string>
     <string name="user_empty">Bitte geben Sie Ihren Benutzernamen ein</string>
