[mod] changed pictures disabled upload from camera and added gaussian comparison model

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -106,12 +106,16 @@
     <string name="none">kei-\nnes</string>
     <string name="sex">Geschlecht</string>
     <string name="pitch_mean">Pitch</string>
-    <string name="pitchText">Gesunde männliche Testperson kleinster Wert: 85.0\nGesunde männliche Testperson größter Wert: 212.5\nGesunde männliche Testperson mittlerer Wert: 120.0\nIhr Wert: </string>
-    <string name="intonationText">Gesunde männliche Testperson kleinster Wert: 5.5\nGesunde männliche Testperson größter Wert: 65.1\nGesunde männliche Testperson mittlerer Wert: 17.5\nIhr Wert: </string>
-    <string name="speechRateText">Gesunde männliche Testperson kleinster Wert: 0.5\nGesunde männliche Testperson größter Wert: 3.2\nGesunde männliche Testperson mittlerer Wert: 1.3\nIhr Wert: </string>
-    <string name="pitchTextF">Gesunde weibliche Testperson kleinster Wert: 107.0\nGesunde weibliche Testperson größter Wert: 265.7\nGesunde Testperson mittlerer Wert: 190.0\nIhr Wert: </string>
-    <string name="intonationTextF">Gesunde weibliche Testperson kleinster Wert: 6.8\nGesunde weibliche Testperson größter Wert: 108.9\nGesunde weibliche Testperson mittlerer Wert: 31.4\nIhr Wert: </string>
-    <string name="speechRateTextF">Gesunde weibliche Testperson kleinster Wert: 0.1\nGesunde weibliche Testperson größter Wert: 3.3\nGesunde weibliche Testperson mittlerer Wert: 1.2\nIhr Wert: </string>
+    <string name="UploadPictures">Laden Sie Bilder hoch</string>
+    <string name="UploadPicturesGallery">Laden Sie Bilder von Ihrer Gallerie hoch!</string>
+    <string name="Gallery">Gallerie</string>
+    <string name="explanationRestults">Das ist die Ergebnisseite. Hier sehen Sie Ihre Ergebnisse nach einer erfolgreichen Trainingseinheit. Die Skalierung zeig wie gut Ihre Ergebnisse im Vergleich zu einer gesunden Testperson sind, wobei 100% bedeuted Ihr Ergebnis liegt innerhalb eines gesunden Bereichs und 0% bedeuted Ihr Ergebnis is weit von einem gesunden Bereich entfernt. Für mehr Informationen, wie zum Beispiel Ihren genauen Wert oder eine schöne Graphik, klicken Sie auf den Balken, der die Eigenschaft beschreibt über die Sie mehr wissen möchten.</string>
+    <string name="pitchText">Gesunde männliche Testperson kleinster Wert: 132.3\nGesunde männliche Testperson größter Wert: 332.8\nGesunde männliche Testperson mittlerer Wert: 257.92\nIhr Wert: </string>
+    <string name="intonationText">Gesunde männliche Testperson kleinster Wert: 51.1\nGesunde männliche Testperson größter Wert: 129.8\nGesunde männliche Testperson mittlerer Wert: 79.03\nIhr Wert: </string>
+    <string name="speechRateText">Gesunde männliche Testperson kleinster Wert: 2.2\nGesunde männliche Testperson größter Wert: 4.5\nGesunde männliche Testperson mittlerer Wert: 3.38\nIhr Wert: </string>
+    <string name="pitchTextF">Gesunde weibliche Testperson kleinster Wert: 303.6\nGesunde weibliche Testperson größter Wert: 401\nGesunde Testperson mittlerer Wert: 345.4\nIhr Wert: </string>
+    <string name="intonationTextF">Gesunde weibliche Testperson kleinster Wert: 59.5\nGesunde weibliche Testperson größter Wert: 123.4\nGesunde weibliche Testperson mittlerer Wert: 96.3\nIhr Wert: </string>
+    <string name="speechRateTextF">Gesunde weibliche Testperson kleinster Wert: 2.2\nGesunde weibliche Testperson größter Wert: 3.7\nGesunde weibliche Testperson mittlerer Wert: 3.1\nIhr Wert: </string>
     <string name="hearingAbilityText">Gesunde Testperson kleinster Wert: 100,0%\nGesunde Testperson größter Wert: 100,0%\nGesunde Testperson mittlerer Wert: 100,0%\nIhr Wert: </string>
     <string name="trainingsetFinishedSaying">Sie haben Ihre heutige Übungseinheit abgeschlossen!\nSehen Sie sich nun Ihre Ergebnisse an!</string>
     <string name="smoker">Raucher</string>
@@ -133,6 +137,7 @@
     <string name="dailyEvaluation">Ergebnis/Tag</string>
     <string name="evaluationOverTime">Ergebnis/Jahr</string>
     <string name="mainPage">Start</string>
+    <string name="gauss">Normalverteilung</string>
     <string name="exerciseList">Übungen</string>
     <string name="settings">Einstellungen</string>
     <string-array name="Exercises">
