--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="Motivation">Good Job!</string>
     <string name="Done">Done</string>
     <string name="Again">Again</string>
+    <string name="UploadPictures">Upload pictures</string>
+    <string name="UploadPicturesGallery">Upload your personal picture from your gallery</string>
+    <string name="Gallery">Gallery</string>
     <string name="timefornotifications">time for notifications</string>
     <string name="DescriptionMinPairs2">Select the word you heard</string>
     <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
@@ -82,13 +85,14 @@
     <string name="yes">yes</string>
     <string name="no">no</string>
     <string name="pitch_mean">pitch_mean</string>
+    <string name="explanationRestults">This is the daily evaluation screen. Here you can see your stats after each successfully absolved training session. The scale shows how you performed in comparison to healthy test persons, where 100% means your results are in the range of a healthy person and 0% means your result is far off from the range of a healthy person. For further information like your exact value or a nice visualization, click on one of the bars to get the information for this characteristic.</string>
     <string name="hearingAbilityText">healthy control person minimal value: 100,0%\nhealthy control person maximal value: 100,0%\nhealthy control mean value: 100,0%\nyour value: </string>
-    <string name="pitchText">healthy male control person minimal value: 85.0\nhealthy male control person maximal value: 212.5\nhealthy male control mean value: 120.0\nyour value: </string>
-    <string name="intonationText">healthy male control person minimal value: 5.5\nhealthy male control person maximal value: 65.1\nhealthy male control mean value: 17.5\nyour value: </string>
-    <string name="speechRateText">healthy male control person minimal value: 0.5\nhealthy male control person maximal value: 3.2\nhealthy male control mean value: 1.3\nyour value: </string>
-    <string name="pitchTextF">healthy female control person minimal value: 107.0\nhealthy female control person maximal value: 265.7\nhealthy female control mean value: 190.0\nyour value: </string>
-    <string name="intonationTextF">healthy female control person minimal value: 6.8\nhealthy female control person maximal value: 108.9\nhealthy female control mean value: 31.4\nyour value: </string>
-    <string name="speechRateTextF">healthy female control person minimal value: 0.1\nhealthy female control person maximal value: 3.3\nhealthy female control mean value: 1.2\nyour value: </string>
+    <string name="pitchText">healthy male control person minimal value: 132.3\nhealthy male control person maximal value: 332.8\nhealthy male control mean value: 257.92\nyour value: </string>
+    <string name="intonationText">healthy male control person minimal value: 51.1\nhealthy male control person maximal value: 129.8\nhealthy male control mean value: 79.03\nyour value: </string>
+    <string name="speechRateText">healthy male control person minimal value: 2.2\nhealthy male control person maximal value: 4.5\nhealthy male control mean value: 3.38\nyour value: </string>
+    <string name="pitchTextF">healthy female control person minimal value: 303.6\nhealthy female control person maximal value: 401\nhealthy female control mean value: 345.4\nyour value: </string>
+    <string name="intonationTextF">healthy female control person minimal value: 59.5\nhealthy female control person maximal value: 123.4\nhealthy female control mean value: 96.3\nyour value: </string>
+    <string name="speechRateTextF">healthy female control person minimal value: 2.2\nhealthy female control person maximal value: 3.7\nhealthy female control mean value: 3.1\nyour value: </string>
     <string name="chooseyour">Choose your</string>
     <string name="exercise">EXERCISE!</string>
     <string name="startimproving">Start improving</string>
@@ -111,6 +115,7 @@
     <string name="trainingsetTitle">Trainingset</string>
     <string name="listEmpty">Nothing left to do today.</string>
     <string name="user_empty">please enter your username</string>
+    <string name="gauss">Normaldistribution</string>
     <string name="userid_empty">please enter your phone number</string>
     <string name="dailyEvaluation">results/day</string>
     <string name="evaluationOverTime">results/year</string>
