--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="timefornotifications">time for notifications</string>
     <string name="DescriptionMinPairs2">Select the word you heard</string>
     <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
-    <string name="DescriptionSyllableRepetition">word repetition</string>
+    <string name="DescriptionSyllableRepetition">Repeat the shown syllable</string>
     <string name="ExplanationSyllableRepetition1">Please repeat\u0020</string>
     <string name="ExplanationSyllableRepetition2">\u0020as many times as possible in five seconds. For example like that:\u0020</string>
     <string name="ExamplePataka"> pataka, pataka, pataka, pataka, ..., pataka.</string>
@@ -25,7 +25,7 @@
     <string name="ExplanationSyllableRepetition3">\u0020Press \"record\" when you are ready to start the timer. The timer automatically stops the exercise after five seconds.</string>
     <string name="DescriptionMinPairs">Say the word you heard</string>
     <string name="ExplanationMinPairs">Press the \"listen\" button to listen to a word, then press the \"record\" button and repeat the word you heard. Press \"recording ...\" when you are done. </string>
-    <string name="DescriptionWordList">word repetition</string>
+    <string name="DescriptionWordList">Read the word on the screen</string>
     <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. Press \"recording ...\" when you are done. </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
@@ -36,7 +36,7 @@
     <string name="dailyResultDesc">Check out your daily results here! See how the values of your hearing, your intonation and your speech rate were today!</string>
     <string name="evaluationOverTimeDesc">See how you changed over the course of time! Check out if you improved in the last months and keep your training up!</string>
     <string name="content_notify">Do your daily exercises now to keep improving!</string>
-    <string name="DescriptionPictureDescription">picture description</string>
+    <string name="DescriptionPictureDescription">Describe the shown picture</string>
     <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture on the screen. When you are finished press the \"recording ...\" button.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
     <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press \"recording ...\" when you are done.</string>
